Рефакторинг JS TODO: Фикс Cookie авторизацию

--- a/NoSTORE/Views/Product/Details.cshtml
+++ b/NoSTORE/Views/Product/Details.cshtml
@@ -94,7 +94,7 @@
                 <img src="~/photos/products/@Model.Name/@Model.Images[0]" />
             </div>
         </div>
-        <div>
+        <div class="mi">
             <div class="main__info">
                 <div class="titles">
                     <h1>@Model.Name</h1>
