--- a/NoSTORE/Views/User/Index.cshtml
+++ b/NoSTORE/Views/User/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model UserProfileSafe
+﻿@using NoSTORE.Models.DTO
+@model UserDto
 @{
     ViewData["Title"] = "Профиль";
     ViewData["CSS"] = "profile.css";
