--- a/NoSTORE/wwwroot/scss/layout.scss
+++ b/NoSTORE/wwwroot/scss/layout.scss
@@ -137,11 +137,12 @@
 }
 
 #profile-modal {
+    opacity: 0;
+    visibility: hidden;
     display: none;
     overflow: visible;
     position: absolute;
     right: 0%;
-    opacity: 0;
     background-color: white;
     z-index: 1000;
     padding: 1rem;
@@ -150,12 +151,6 @@
     -moz-box-shadow: 0px 0px 16px 22px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 0px 16px 22px rgba(0, 0, 0, 0.2);
     border-radius: 0.4rem;
-    transition: opacity 0.2s ease-out;
-
-    &:hover {
-        display: block;
-        opacity: 1;
-    }
 
     .p-modal_content {
         div {
@@ -331,11 +326,12 @@ header {
                         &:hover {
                             background: variables.$block-color
                         }
+
                     }
 
                     .sr {
                         display: flex;
-                        gap: 5px;
+                        gap: 10px;
 
                         .sr-image {
                             display: flex;
@@ -343,8 +339,9 @@ header {
                             align-items: center;
 
                             img {
-                                width: 10vh;
-                                height: 10vh;
+                                width: 6rem;
+                                height: 6rem;
+                                object-fit: scale-down;
                             }
                         }
 
@@ -424,6 +421,7 @@ header {
 
                 .icon-wrapper {
                     position: relative;
+
                     .badge {
                         border-radius: 50%;
                         background-color: variables.$additional-color;
