--- a/NoSTORE/Views/Shared/_Layout.cshtml
+++ b/NoSTORE/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/@ViewData["CSS"]" asp-append-version="true" />
     <link rel="icon" href="~/svg/logo.svg" type="image/svg+xml" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/8.0.7/signalr.min.js"></script>
+    <script type="module" src="~/js-new/layout/index.js"></script>
 </head>
 <body>
     @Html.AntiForgeryToken()
@@ -98,8 +100,8 @@
             </div>
         </nav>
     </header>
-    <script src="~/js/form-control.js"></script>
-    <script src="~/js/auth.js"></script>
+@*     <script src="~/js/form-control.js"></script>
+    <script type="module" src="~/js/auth.js"></script> *@
     <div id="login-modal" class="modal" style="display: none;">
         <div class="modal-content" id="modal-content">
             <h2 id="title">Вход в аккаунт</h2>
@@ -210,6 +212,7 @@
             </div>
         </div>
     </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/Flip.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
