--- a/NoSTORE/wwwroot/scss/details_product.scss
+++ b/NoSTORE/wwwroot/scss/details_product.scss
@@ -39,7 +39,9 @@
                 }
 
                 img {
-                    width: 10vh
+                    width: 6rem;
+                    height: 6rem;
+                    object-fit: scale-down;
                 }
 
                 .mini__info {
@@ -210,10 +212,13 @@
     border-radius: 10px;
     padding: 1rem;
     display: flex;
+    flex-direction: row;
     gap: 2rem;
     margin-bottom: 2rem;
+    width: 100%;
 
     .images {
+        display: flex;
         height: 30rem;
         display: flex;
         gap: 1rem;
@@ -224,20 +229,28 @@
 
             img {
                 height: 90px;
+                width: 90px;
+                object-fit: scale-down;
             }
         }
 
         .main_image {
+            width: 30rem;
             img {
-                height: 100%
+                height: 100%;
+                width: 30rem;
+                object-fit: scale-down;
             }
         }
     }
-
+    .mi {
+        flex: 1;
+    }
     .main__info {
         display: flex;
         justify-content: space-between;
-
+        width: 100%;
+        align-items: start;
         .titles {
             h1 {
                 @include variables.font($size: 2.3rem);
@@ -261,6 +274,8 @@
         img {
             margin-top: 10px;
             width: 120px;
+            height: 40px;
+            object-fit: scale-down;
         }
 
         .rating {
