--- a/NoSTORE/wwwroot/scss/products.scss
+++ b/NoSTORE/wwwroot/scss/products.scss
@@ -1,5 +1,22 @@
 ﻿@use 'variables';
 
+.show-button {
+    position: absolute;
+    margin-left: 20px;
+    background: variables.$block-color;
+    z-index: 100;
+    padding: 1rem;
+    border-radius: 6px;
+    -webkit-box-shadow: 0px 0px 18px 16px rgba(38, 40, 41, 0.53);
+    -moz-box-shadow: 0px 0px 18px 16px rgba(38, 40, 41, 0.53);
+    box-shadow: 0px 0px 18px 16px rgba(38, 40, 41, 0.53);
+    transition: background 0.2s ease;
+
+    &:hover {
+        background: variables.$bg-color;
+    }
+}
+
 .products {
     display: flex;
     flex-direction: column;
@@ -58,7 +75,9 @@
                         align-items: center;
 
                         img {
-                            height: 26vh;
+                            width: 14rem;
+                            height: 14rem;
+                            object-fit: scale-down;
                         }
 
                         &::after {
@@ -269,15 +288,17 @@
                 border-radius: 4px;
                 border: 2px solid variables.$additional-color;
                 outline: none;
-                padding: 5px;
+                padding: 5px 15px 5px 5px;
                 color: variables.$text-color;
                 background-color: variables.$bg-color;
                 font-size: 24px;
                 width: 100%;
+                justify-content: space-between;
 
                 input {
                     border: none;
                     background: none;
+                    font-size: 1.4rem;
                 }
 
                 button {
@@ -298,6 +319,10 @@
                 display: flex;
                 justify-content: space-between;
                 margin-bottom: 10px;
+
+                h3 {
+                    font-size: 1.6rem;
+                }
 
                 button {
                     background: none;
@@ -327,6 +352,7 @@
                     color: variables.$text-color;
                     background-color: variables.$bg-color;
                     width: 8rem;
+                    font-size: 1.2rem;
                 }
             }
 
@@ -337,15 +363,17 @@
                     border-radius: 4px;
                     border: 2px solid variables.$additional-color;
                     outline: none;
-                    padding: 5px;
+                    padding: 5px 15px 5px 5px;
                     color: variables.$text-color;
                     background-color: variables.$bg-color;
                     font-size: 24px;
                     width: 100%;
+                    justify-content: space-between;
 
                     input {
                         border: none;
                         background: none;
+                        font-size: 1.4rem;
                     }
 
                     button {
